# Matrix_Calculator

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixCalculator_ru_RU.ts  operations.cpp  operations.h
Qt/build-matrixCalculator-Desktop_Qt_5_15_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Qt/build-matrixCalculator-Desktop_Qt_5_15_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-901ef3c57b64814b8295.json  cmakeFiles-v1-877ee1f566d6909c22dc.json  codemodel-v2-095ab37899f47ef6696c.json  index-2021-02-21T20-55-33-0650.json  target-matrixCalculator-Debug-0c9ee5dd066f915f102b.json  target-matrixCalculator_autogen-Debug-014028a6934ee0796248.json  target-matrixCalculator_autogen_timestamp_deps-Debug-1b1a0d604a943c14831c.json
Qt/build-matrixCalculator-Desktop_Qt_5_15_0_MinGW_64_bit-Debug/matrixCalculator_autogen/: deps
Qt/build-matrixCalculator-Desktop_Qt_5_15_0_MinGW_64_bit-Debug/matrixCalculator_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
old/: CMakeLists.txt  MatrixCalculator.cpp  Qt.7  operations.cpp  operations.h  Макет.psd
old/Debug/: MatrixCalculator.exe.recipe  operations.obj.enc
old/Debug/MatrixCalculator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MatrixCalculator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
